libs/preprocessor/tests/errors/pe18_eoi_ifstate/stderr.ansi
[31m[PE18] Error:[0m end of input reached while reading an `#if` directive
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:3:2[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;201m#[0m[38;5;201mi[0m[38;5;201mf[0m[38;5;249m [0m[38;5;249mt[0m[38;5;249me[0m[38;5;249ms[0m[38;5;249mt[0m
 [38;5;240m  │[0m [38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m  
 [38;5;240m  │[0m  [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m last `[38;5;201m#if[0m` directive before end of input
[38;5;246m───╯[0m
